# sailfish-voicecall-filter

./: .gitignore  CMakeLists.txt
daemon/: CMakeLists.txt  filterhandler.cpp  filterhandler.h  main.cpp
daemon/systemd/: voicecallfilterd.service
lib/: CMakeLists.txt  blockedlist.cpp  blockedlist.h  filter.cpp  filter.h  filteraction.h  filterlist.cpp  filterlist.h  filterservice.xml  ignoredlist.cpp  ignoredlist.h  sailfish.voicecall.filter.gschema.xml
plugin/: CMakeLists.txt  filterservice.c  filterservice.h  org.sailfishos.voicecallfilter.conf  plugin.c
rpm/: sailfish-voicecall-filter.spec
tests/: CMakeLists.txt  dconf.prof  tst_filterlist.cpp
